2008-12-30  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (VM::mayBeStackPointer): Added.

2008-12-29  higepon  <higepon@users.sourceforge.jp>

        * VM-Run.cpp (run): Added for breaking build dependencies.

        * VM-Profiler.cpp: Added for breaking build dependencies.

2008-12-28  higepon  <higepon@users.sourceforge.jp>

        * Added gtest-1.2.1 for testsing.

        * TestVector.cpp (TEST): Added.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss (repl): REPL now accepts mulitple lines.

2008-12-27  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (getStackTrace): Safe stack trace.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss: Disabled extract-trace which is not used.

2008-12-26  higepon  <higepon@users.sourceforge.jp>

        * Passed all of eval tests of R6RS test suite.

        * VM.cpp (evalAfter): Added new eval System. It needs refactoring.

        * compiler.scm (compile-w/o-halt): Adde for new eval.

2008-12-25  higepon  <higepon@users.sourceforge.jp>

        * scanner.re (scan): Fixed nested comment. Thanks to leque.
                     (scan): Fixed #!r6rs comment style.
                     (Scanner::scan): Added DELMITER support.

        * Passed all of conditions tests of R6RS test suite.

        * tools/psyntax-r6rs/rev10_to_10/psyntax-buildscript-mosh.ss (identifier->library-map): Added i/o-error-position

        * Passed all of R5RS compatibility tests of R6RS test suite.

        * tools/psyntax-r6rs/rev10_to_10/psyntax-buildscript-mosh.ss (identifier->library-map): Added ne,se to definition of '=>'.

        * test-data.scm (read-write-invariant?): Added some tests.

        * TextualOutputPort.cpp (putDatum): Fixed write of #\nul. (Thanks to leque).
                                (putDatum): Added write of #\vtab.
                                (putDatum): Fixed write of strings which include "\a".

        * Passed all of reader tests of R6RS test suite.
